# mmod

./: .gitignore  CMakeLists.txt  README.txt
cells/: CMakeLists.txt  MModModelFiller.cpp  MModModelInserter.cpp  MModModelLoader.cpp  MModModelWriter.cpp  MModPersister.cpp  MModTester.cpp  MModTrainer.cpp  Pyramid.cpp  module.cpp
cells/scripts/: config_detection.sample  testing.py  trainer.py  training.py
modules/: CMakeLists.txt  MModPersister.cpp  MModTester.cpp  MModTrainer.cpp  module.cpp  test_mmod.py  train_mmod.py
src/: CMakeLists.txt  MyMMod.cpp  mmod_color.cpp  mmod_color.h  mmod_feature.cpp  mmod_features.h  mmod_general.cpp  mmod_general.h  mmod_mode.cpp  mmod_mode.h  mmod_objects.cpp  mmod_objects.h
